objects/LLC_BI__Fee__c.object
<CustomObject>
    <description>The Fee Object is used to track details of the fees associated to a Loan (Product)</description>
    <fields>
        <fullName>CF_Fee_Category__c</fullName>
        <label>Fee Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LLC_BI__Fee_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Real Estate</fullName>
                </value>
                <value>
                    <fullName>UCC</fullName>
                </value>
                <value>
                    <fullName>SBA General</fullName>
                </value>
                <value>
                    <fullName>Titled Collateral</fullName>
                </value>
                <value>
                    <fullName>Boats</fullName>
                </value>
                <value>
                    <fullName>Aircraft</fullName>
                </value>
                <value>
                    <fullName>Barge / Vessel / Yacht /House Boat</fullName>
                </value>
                <value>
                    <fullName>SBA Real Estate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Instructions__c</fullName>
        <description>This field is used on Fee UI on PP</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CF_Recurring_Or_One_Time__c</fullName>
        <label>Recurring Or One Time</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>One Time</fullName>
                    <default>true</default>
                    <label>One Time</label>
                </value>
                <value>
                    <fullName>Recurring</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CashCollectionMethodFormula__c</fullName>
        <description>Deprecated - Collection Methods in formula are no longer valid picklist.</description>
        <formula>IF(ISPICKVAL(LLC_BI__Collection_Method__c,&quot;Paid at Closing&quot;), &quot;Cash&quot;, IF(ISPICKVAL(LLC_BI__Collection_Method__c,&quot;Financed Add to Loan&quot;), &quot;Financed&quot;, IF(ISPICKVAL(LLC_BI__Collection_Method__c,&quot;Financed Net Out of Loan&quot;), &quot;Financed&quot;,&quot;&quot;)))</formula>
        <label>CashCollectionMethodFormula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CollectionMethodFormula__c</fullName>
        <description>** Deprecated - No longer using field. ** (6/2023) Reassigning Cash or Financed for the collection method to overwrite the selected values as these are the accepted values for LaserPro.</description>
        <formula>IF(ISPICKVAL(LLC_BI__Collection_Method__c,&quot;Paid at Closing&quot;), &quot;Cash&quot;, IF(ISPICKVAL(LLC_BI__Collection_Method__c,&quot;Financed Add to Loan&quot;), &quot;Financed&quot;, IF(ISPICKVAL(LLC_BI__Collection_Method__c,&quot;Financed Net Out of Loan&quot;), &quot;Financed&quot;,&quot;&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CollectionMethodFormula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Source__c</fullName>
        <description>Custom field to designate source Credit Union of object used by nCino Data Services.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Integration Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JHJX__Core_External_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Core Booking External Id</label>
        <length>125</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LLC_BI__Add_To_Finance_Charge__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The user selects this checkbox field to indicate that a fee is a Reg Z finance charge that the system uses to calculate the APR. By default, this field is deselected.</description>
        <inlineHelpText>Select this field to indicate a fee as a finance charge.</inlineHelpText>
        <label>Add To Finance Charge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Add_To_MAPR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Administrators select this optional boolean field when a fee is included in the MAPR calculation. Fees added to the finance charge are always considered MAPR fees. By default, the value is false.</description>
        <inlineHelpText>Select this field when a fee is included in the MAPR calculation.</inlineHelpText>
        <label>Add To MAPR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Add_To_Principal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>--DEPRECATED-- This optional checkbox field adds fees to principal balance when charged.</description>
        <label>-D Add To Principal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Add_To_Principle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>--DEPRECATED-- Deprecated field, no longer in use, replaced by Add_To_Principal__c</description>
        <label>Add To Principle - D</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Amount_Changed__c</fullName>
        <description>The system autopopulates this formula field to indicate a fee&apos;s amount changed from its original amount relative to the corresponding loan fee. By default, it is blank.</description>
        <formula>IF(AND(ISPICKVAL(LLC_BI__Status__c ,&apos;Inactive&apos;), NOT ISBLANK(LLC_BI__Pricing_Option__c)), IF(ISBLANK(LLC_BI__Fee__c), LLC_BI__Amount__c, IF(LLC_BI__Amount__c=LLC_BI__Fee__r.LLC_BI__Amount__c, NULL, LLC_BI__Amount__c - LLC_BI__Fee__r.LLC_BI__Amount__c)), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Use this field to see the change of amount after you edit a fee from its original amount.</inlineHelpText>
        <label>Amount Changed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Amount_Collected__c</fullName>
        <label>Amount Collected</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Amount_Paid__c</fullName>
        <description>This field is manually entered and allows the user to specify the amount that has been paid on the fee.</description>
        <inlineHelpText>The amount paid on the fee.</inlineHelpText>
        <label>Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Amount_Remaining__c</fullName>
        <formula>LLC_BI__Amount__c - LLC_BI__Amount_Collected__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Amount__c</fullName>
        <description>This field allows the user to specify the total amount charged for the fee. This could be preset for standard fees using fee management templates, or added as a user is applying a non standard fee.</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Annual_Payment_Amount__c</fullName>
        <description>Users populate this optional currency field to indicate the amount the borrower pays annually for the fee. By default, this field is blank.</description>
        <inlineHelpText>Enter the annual payment amount for the fee.</inlineHelpText>
        <label>Annual Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Basis_Amount__c</fullName>
        <description>Administrators populate this field with the basis amount. The system uses this field for percentage fees calculations. By default, it is blank.</description>
        <inlineHelpText>Enter the basis amount. The system uses this field for percentage fees calculations.</inlineHelpText>
        <label>Basis Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Basis_Source__c</fullName>
        <description>Users populate this optional picklist with the basis for percentage fees, such as loan amount, another loan field or scenario amount. This field is used when Calculation Type is equal to percent. By default, it is blank.</description>
        <label>Basis Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LLC_BI__Amount__c</fullName>
                    <label>Loan Amount</label>
                </value>
                <value>
                    <fullName>LLC_BI__Scenario_Amount__c</fullName>
                    <label>Scenario Amount</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Calculation_Type__c</fullName>
        <description>This optional picklist field specifies how the fee is to be computed.</description>
        <label>Calculation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flat Amount</fullName>
                </value>
                <value>
                    <fullName>Percentage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Change_Of_Circumstance_Reason__c</fullName>
        <description>Users populate this optional picklist field to indicate the change of circumstance reason for the fee. By default, this field is blank.</description>
        <inlineHelpText>Select the change of circumstance reason for the fee.</inlineHelpText>
        <label>Change of Circumstance Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Changed Circumstance Affecting Settlement Costs</fullName>
                </value>
                <value>
                    <fullName>Changed Circumstance Affecting Eligibility</fullName>
                </value>
                <value>
                    <fullName>Borrower Requested Revisions</fullName>
                </value>
                <value>
                    <fullName>Loan Estimate Expiration</fullName>
                </value>
                <value>
                    <fullName>Interest Rate Locked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_Valuation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The field is not required and specifies the related collateral valuation record resulting in the fee.</description>
        <inlineHelpText>Lookup to the related collateral valuation record to which this fee is being applied.</inlineHelpText>
        <label>Collateral Valuation</label>
        <referenceTo>LLC_BI__Collateral_Valuation__c</referenceTo>
        <relationshipLabel>Fees</relationshipLabel>
        <relationshipName>Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collection_Method__c</fullName>
        <description>The user populates this picklist field to specify the method of collection for a fee. Values of Cash and Financed will be used in Financed Fee Calculations for the loan. By default, this field is blank.</description>
        <inlineHelpText>Populate this picklist to specify the collection method for a fee.</inlineHelpText>
        <label>Collection Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Financed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Context_Id__c</fullName>
        <description>Users or the system populate this text field to capture the identity of the related record associated to the fee.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field indicates any associated records related to the fee.</inlineHelpText>
        <label>Context Identity</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Date_Collected__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Collected</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Disable_Auto_Updates__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Users populate this optional checkbox field for manually edited fee records. The system uses this to determine if the fee record can be updated automatically. By default, it is deselected.</description>
        <inlineHelpText>Select this if the fee record should be locked and not updated automatically based on criteria changes.</inlineHelpText>
        <label>Disable Auto Updates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Fee_Code__c</fullName>
        <description>This field is configured to display all internal codes that the financial institution may have for fees. This field is a picklist and is used to specify the code associated to the Fee being applied. This can be preset for standard fees using fee management templates or added as a user is applying non standard fees.</description>
        <label>Fee Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>001</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Fee_Loan_Aggregate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field links the fee to the Fee Loan Aggregate object, which rolls up data from fee to display on the fees summary tab section of the loan. This field is automatically populated.</description>
        <inlineHelpText>The object that rolls up data from fee for display on the Loan</inlineHelpText>
        <label>Fee Loan Aggregate</label>
        <referenceTo>LLC_BI__Fee_Loan_Aggregate__c</referenceTo>
        <relationshipLabel>Fees</relationshipLabel>
        <relationshipName>Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Fee_Payable_To_City__c</fullName>
        <description>This is a formula field that is auto-populated with the city associated to the &quot;payable to&quot; relationship.</description>
        <formula>LLC_BI__Fee_Payable_To__r.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fee Payable To City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Fee_Payable_To_State__c</fullName>
        <description>This is a formula field that is auto-populated with the state associated to the &quot;payable to&quot; relationship.</description>
        <formula>LLC_BI__Fee_Payable_To__r.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fee Payable To State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Fee_Payable_To_Street__c</fullName>
        <description>This is a formula field that is auto-populated with the street address associated to the &quot;payable to&quot; relationship.</description>
        <formula>LLC_BI__Fee_Payable_To__r.BillingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fee Payable To Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Fee_Payable_To_Zip_Code__c</fullName>
        <description>This is a formula field that is auto-populated with the postal code associated to the &quot;payable to&quot; relationship.</description>
        <formula>LLC_BI__Fee_Payable_To__r.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fee Payable To Zip Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Fee_Payable_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is manually entered and is used to lookup to a relationship that the fee is being paid to.</description>
        <label>Fee Payable To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Fees</relationshipLabel>
        <relationshipName>Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Fee_Status__c</fullName>
        <description>The system autopopulates this formula field to indicate whether the user has edited the amount of the the pricing option fee relative to the loan or if the user added a fee. By default, it is blank</description>
        <formula>IF(AND(ISPICKVAL(LLC_BI__Status__c ,&apos;Inactive&apos;), NOT ISBLANK(LLC_BI__Pricing_Option__c)), IF(ISBLANK(LLC_BI__Fee__c), $Label.LLC_BI__Fee_Added, IF(LLC_BI__Amount__c=LLC_BI__Fee__r.LLC_BI__Amount__c, NULL, $Label.LLC_BI__Fee_Edited)), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fee Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Fee_Type_Description__c</fullName>
        <description>This field only appears when the fee type of &quot;other&quot; is selected. It is a free form text box that allows the user to enter in a description for the fee being applied to the loan.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>When the fee type is other this field is a describes the fee type.</inlineHelpText>
        <label>Fee Type Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Fee_Type__c</fullName>
        <description>This field is a picklist that lets the user specify the type of fee that is being applied to the loan. This can be preset for standard fees using fee management templates, or added as a user is applying a non standard fee.</description>
        <label>Fee Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AD&amp;D Insurance</fullName>
                </value>
                <value>
                    <fullName>Appraisal Invoice</fullName>
                </value>
                <value>
                    <fullName>Attorney Fees</fullName>
                </value>
                <value>
                    <fullName>Business Valuation</fullName>
                </value>
                <value>
                    <fullName>CDC Origination Fee</fullName>
                </value>
                <value>
                    <fullName>Closing Fee</fullName>
                </value>
                <value>
                    <fullName>Credit Life Insurance</fullName>
                </value>
                <value>
                    <fullName>EDR Environmental Search - Commercial Loans</fullName>
                </value>
                <value>
                    <fullName>E-Recording in Simplifile</fullName>
                </value>
                <value>
                    <fullName>Escrow Reserves</fullName>
                </value>
                <value>
                    <fullName>FAA Lien Search - Aircraft</fullName>
                </value>
                <value>
                    <fullName>FedEx / Overnight - One Way</fullName>
                </value>
                <value>
                    <fullName>FedEx / Overnight - Round Trip</fullName>
                </value>
                <value>
                    <fullName>Flood Certificate</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>IRS Transcript Fee</fullName>
                </value>
                <value>
                    <fullName>Loan Origination Fee</fullName>
                </value>
                <value>
                    <fullName>MO Titled Collateral  - mailed Title Application &amp; NOL - Boats</fullName>
                </value>
                <value>
                    <fullName>MO Titled Collateral  - mailed Title Application &amp; NOL - Motor Vehicle/Mobile Homes</fullName>
                </value>
                <value>
                    <fullName>MO Titled Collateral  - mailed Title Application &amp; NOL - Outboard Motors</fullName>
                </value>
                <value>
                    <fullName>MO Titled Collateral - online Notice of Lien</fullName>
                </value>
                <value>
                    <fullName>Other Fees</fullName>
                </value>
                <value>
                    <fullName>Pest Inspection</fullName>
                </value>
                <value>
                    <fullName>Phase I Environmental Assessment</fullName>
                </value>
                <value>
                    <fullName>Phase II Environmental Assessment</fullName>
                </value>
                <value>
                    <fullName>Preferred Ship Mortgage</fullName>
                </value>
                <value>
                    <fullName>Recording MO Assignment of Rents</fullName>
                </value>
                <value>
                    <fullName>Recording MO Deed of Trust</fullName>
                </value>
                <value>
                    <fullName>Recording MO Notice of Intended Sale</fullName>
                </value>
                <value>
                    <fullName>Recording MO Warranty Deed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Fee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system automatically populates this lookup field to track which loan fee a pricing option&apos;s fee writesback to when a user selects a scenario.</description>
        <inlineHelpText>Tracks which pricing option fee the system copies to the loan&apos;s fee when a user selects the pricing option.</inlineHelpText>
        <label>Fee</label>
        <referenceTo>LLC_BI__Fee__c</referenceTo>
        <relationshipLabel>Fees</relationshipLabel>
        <relationshipName>Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__First_Payout_Date__c</fullName>
        <description>Users populate this optional date field to indicate the date the first escrow disbursement is due. By default, this field is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the date of the first payout from the escrow account.</inlineHelpText>
        <label>First Payout Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Additional_Charge__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The system automatically populates this optional checkbox field to indicate the fee is included in the additional charge aggregate total. By default, this field is deselected.</description>
        <inlineHelpText>This system-populated field indicates the fee is included in the additional charge aggregate total.</inlineHelpText>
        <label>Is Additional Charge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Income__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The user populates this field to indicate if the fee is an income fee. If the fee has a template, the system autopopulates the field. By default, it is not selected.</description>
        <inlineHelpText>Select this field if the fee is an income fee.</inlineHelpText>
        <label>Is Income</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Paid_By_Borrower__c</fullName>
        <description>This checkbox is populated automatically if &quot;Borrower&quot; is selected from the &quot;Paid By&quot; picklist. This field is generally not made visible to the users and is used behind the scenes for reporting and workflow logic configuration needs.</description>
        <formula>ISPICKVAL(  LLC_BI__Paid_By__c , &apos;Borrower&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Paid By Borrower</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Paid_By_Lender__c</fullName>
        <description>This checkbox is populated  automatically if  &quot;Lender&quot; is selected from the &quot;Paid By&quot; picklist. This field is generally not made visible to the users and is used behind the scenes for reporting and workflow logic configuration needs.</description>
        <formula>ISPICKVAL(LLC_BI__Paid_By__c, &apos;Lender&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Paid By Lender</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Paid_By_Seller__c</fullName>
        <description>This checkbox is populated  automatically if  &quot;Seller&quot; is selected from the &quot;Paid By&quot; picklist. This field is generally not made visible to the users and is used behind the scenes for reporting and workflow logic configuration needs</description>
        <formula>ISPICKVAL(  LLC_BI__Paid_By__c  , &apos;Seller&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Paid By Seller</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Paid_at_Closing__c</fullName>
        <description>This field is a checkbox that is populated automatically if &quot; At Closing&quot; is selected from the &quot;Paid at Closing&quot; picklist. This field is generally not made visible to the users and is used behind the scenes for reporting and workflow logic configuration needs.</description>
        <formula>ISPICKVAL( LLC_BI__Paid_at_Closing__c , &apos;At Closing&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Paid at Closing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Standard__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field determines if the fee is part of the standard set of fees (pre-configured using the fee management templates) for this product. This field is automatically set if the fee was selected from the standard fee list to apply to this loan.</description>
        <inlineHelpText>Determines If the fee is part of the standard set of fees for this product.</inlineHelpText>
        <label>Is Standard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Legal_Entities__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The field is not required and specifies the entity involvement record resulting in the fee.</description>
        <inlineHelpText>Lookup to the related entity involvement record to which this fee is being applied.</inlineHelpText>
        <label>Entity Involvement</label>
        <referenceTo>LLC_BI__Legal_Entities__c</referenceTo>
        <relationshipLabel>Fees</relationshipLabel>
        <relationshipName>Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan_Collateral2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The field is not required and specifies the pledged collateral record resulting in the fee.</description>
        <inlineHelpText>Lookup to the related pledged collateral record to which this fee is being applied.</inlineHelpText>
        <label>Pledged Collateral</label>
        <referenceTo>LLC_BI__Loan_Collateral2__c</referenceTo>
        <relationshipLabel>Fees</relationshipLabel>
        <relationshipName>Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan_Covenant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The field is not required and specifies the related covenant record resulting in the fee.</description>
        <inlineHelpText>Lookup to the related covenant record to which this fee is being applied.</inlineHelpText>
        <label>Loan Covenant</label>
        <referenceTo>LLC_BI__Loan_Covenant__c</referenceTo>
        <relationshipLabel>Fees</relationshipLabel>
        <relationshipName>Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan__c</fullName>
        <description>This field is a master detail field that is automatically populated linking the fee being applied to the particular loan it is being applied to.</description>
        <label>Loan</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Fees</relationshipLabel>
        <relationshipName>Fees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Monthly_Payment_Amount__c</fullName>
        <description>The system automatically populates this currency field to indicate the amount the borrower pays monthly for the fee. By default, this field is blank.</description>
        <formula>LLC_BI__Annual_Payment_Amount__c  / 12</formula>
        <inlineHelpText>This system-populated field indicates the monthly payment amount for the fee.</inlineHelpText>
        <label>Monthly Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Number_Of_Escrow_Months__c</fullName>
        <description>The system automatically populates this number field to indicate the total number of months, including the cushion, the borrower pays at closing for their escrow account. By default, this field is blank.</description>
        <inlineHelpText>This system-populated field indicates the total number of months, including the cushion, the borrower pays at closing for their escrow account.</inlineHelpText>
        <label>Number of Escrow Months</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Number_Of_Prepaid_Months__c</fullName>
        <description>Users populate this optional number field to indicate the number of months the borrower prepays for the fee at closing. By default, this field is blank.</description>
        <inlineHelpText>Enter the number of months the borrower prepays for the fee at closing.</inlineHelpText>
        <label>Number of Prepaid Months</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Number_of_Days__c</fullName>
        <description>The system automatically populates this number field to indicate the number of days of prepaid interest due at closing. By default, this field is blank.</description>
        <inlineHelpText>This system-populated field indicates the number of days of prepaid interest due at closing.</inlineHelpText>
        <label>Number of Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Paid_By__c</fullName>
        <description>This field is a picklist that allows the user to specify who is responsible for paying this fee. This value will determine if the &quot;is Paid by Seller&quot; , &quot;is Paid by Lender&quot; or &quot; is Paid by Borrower&quot; checkbox is populated. Each fee will only have 1 selection.</description>
        <label>Paid By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Borrower</fullName>
                </value>
                <value>
                    <fullName>Bank</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Paid_at_Closing__c</fullName>
        <description>This field is a picklist that allows the user to specify whether the fees being applied to the loan are to be paid &quot;At Closing&quot; or &quot;Outside of Closing&quot;. This value will determine if the &quot;is Paid at Closing&quot; checkbox is populated.</description>
        <label>Paid at Closing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>At Closing</fullName>
                    <label>Paid At Closing</label>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>